--- a/01_bs.html
+++ b/01_bs.html
@@ -17,5 +17,19 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <!-- 브라우저(기기) 가로폭에 따라서 마진과 width를 조정해주는 클래스 -->
+    <main class="container">
+      <section>
+        <h1>안녕하세요 [김개발]입니다.</h1>
+        <p>반갑습니다. 저는 프로그래밍을 공부중입니다.</p>
+      </section>
+      <!-- 유틸리티 클래스 -> css를 간단하게 적용 -->
+      <section class="d-flex gap-2 p-3">
+        <div>Java</div>
+        <div>Spring</div>
+        <div>Mysql</div>
+      </section>
+    </main>
+  </body>
 </html>
